style/styles.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");

/* Define variables */
:root {
  --violet: #5d58ef;
}

.quicksand-main {
  font-family: "Quicksand", serif;
  font-optical-sizing: auto;
  /* font-weight: <weight>; */
  font-style: normal;
}

.raleway-second {
  font-family: "Raleway", serif;
  font-optical-sizing: auto;
  /* font-weight: <weight>; */
  font-style: normal;
}

* {
  padding: 0;
  margin: 0;
  border: none;
  border-radius: 0;
  box-shadow: none;
  box-sizing: border-box;

  /* width: 1440rem; */
}

.flex {
  display: flex;
}

body {
  max-width: 194rem; /* Matches the Figma width */
  margin: 0 auto;
  /* background-color: gray; */
  margin-right: 8.75rem;
  margin-left: 8.75rem;
  font-family: "Quicksand", sherif;
}

.btn-primary button {
  background-color: black;
  color: white;
  border-radius: 12px;
  padding: 10px;
  font-weight: 700;
  line-height: 30px;
  padding: 10px 47px;
}

/* 
-------------------------------------------------------------------
>>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>NAV
-------------------------------------------------------------------
*/

nav {
  max-height: 72.5rem; /* Matches Figma height (converted to rem) */
  width: 100%;
  justify-content: space-between;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  align-items: center;
  margin: 0 auto;
}

nav .logo {
  justify-content: center;
  align-items: center;
  gap: 11px;
}

nav .nav-list {
  list-style-type: none;
  justify-content: center;
  gap: 2rem;
}

nav .nav-btn {
  width: 12.3rem;
}

nav .nav-btn button {
  color: white;
  background-color: orange;
  border-radius: 0.75rem;
  border-style: none;
  padding-top: 0.625rem;
  padding-bottom: 0.625rem;
  padding-right: 60.5px;
  padding-left: 60.5px;
  font-weight: 600;
  font-size: 20px;
  line-height: 30px;
}

nav .hamburger {
  display: none;
}

/* 
-------------------------------------------------------------------
>>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>HERO
-------------------------------------------------------------------
*/

.hero-container {
  gap: 50px;
}

.hero-content {
  flex-direction: column;
  justify-content: center;
  gap: 24px;
}

.hero-content h1 {
  font-weight: 700;
  font-size: 56px;
  line-height: 61px;
}

.hero-content p {
  font-weight: 400;
  font-size: 20px;
  /* line-height: 61px; */
}

/* 
-------------------------------------------------------------------
>>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>CURRICULUM
-------------------------------------------------------------------
*/

.curriculum {
  margin-top: 80px;
}

.curriculum h2 {
  font-weight: 700;
  font-size: 46px;
  line-height: 58px;
  text-align: center;
}

.curriculum .cards {
  margin-top: 80px;
  width: 100%;
  gap: 28px;
  justify-content: center;
  background-color: gray;
}

.curriculum .card {
  flex-direction: column;
  justify-content: center;
  max-width: 367.8px;
  height: 477px;
  background-color: beige;
  text-align: center;
  gap: 32px;
  border-radius: 19px;
}

.curriculum .card h3 {
  font-weight: 700;
  font-size: 25px;
  line-height: 30px;
}

.curriculum .card p {
  font-weight: 500;
  font-size: 15px;
  line-height: 30px;
  color: #808080;
  /* font-family: "Raleway", serif; */
}

.curriculum .card h4 {
  font-weight: 700;
  font-size: 15px;
  line-height: 28px;
}

.curriculum .slider {
  /* background-color: gray; */
  gap: 10px;
  justify-content: center;
  margin-top: 80px;
  align-items: center;
}

.curriculum .slider button {
  border-radius: 30px;
  background-color: orange;
  padding: 17px 20px 17px 20px;
}

/* 
-------------------------------------------------------------------

-------------------------------------------------------------------
>>>>>>>>>>>>>>>>>>>>>>>>RESPONSIVE>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-------------------------------------------------------------------

-------------------------------------------------------------------
*/
/* width 390px */
@media screen and (max-width: 24.375rem) {
  body {
    margin-left: 16px;
    margin-right: 16px;
  }

  nav .logo h1,
  nav .nav-list,
  nav .nav-btn {
    display: none;
  }

  .hero-container {
    flex-direction: column;
  }

  /* 
  -------------------------------------------------------------------
  >>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>NAV
  -------------------------------------------------------------------
  */
  nav .logo {
    height: 46px;
    width: 46px;
  }

  nav .hamburger img {
    height: 30px;
    width: 30px;
    /* object-fit: cover; */
  }

  /* 
  -------------------------------------------------------------------
  >>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>HERO
  -------------------------------------------------------------------
  */

  .hero-container {
    flex-direction: column-reverse;
    align-items: center;
    text-align: center;
  }

  .hero-img img {
    width: 100%;
  }
}

